docs: fix color contrast to improve DX

--- a/docs/src/less/index.less
+++ b/docs/src/less/index.less
@@ -468,6 +468,21 @@ span.icon {
     border-bottom: 1px solid #eee;
 }
 
+/* Dark mode overrides */
+@media (prefers-color-scheme: dark) {
+    div.highlight {
+        background-color: var(--color-neutral-5);
+    }
+
+    .eek-table th {
+        background-color: var(--color-neutral-4);
+    }
+
+    th .eek__rating-range {
+        color: var(--color-neutral-8);
+    }
+}
+
 /* stylelint-enable no-descending-specificity */
 
 // stylelint-disable-next-line  no-invalid-position-at-import-rule
